--- a/src/main/resources/templates/mostraFotografo.html
+++ b/src/main/resources/templates/mostraFotografo.html
@@ -85,9 +85,9 @@
 				<section>
 
 					<div class="content-media">
-						<div class="primary-content">
+						<div class="primary-content" style="text-align: center;">
 							<h1 class="entry-title add-bottom">
-								<span th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"> </span>
+								<span th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></span>
 							</h1>
 						</div>
 						<img th:src="@{${fotografo.imgProfilo}}" width="2048px" height="2048px">
