--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,21 +92,21 @@
 								<li>
 									<div class="featured-post-slide">
 
-										<div class="post-background"
-											style="background-image: url('images/thumbs/featured/featured-1.jpg');"></div>
+										<div class="post-background" style="overflow: hidden;">
+										<img th:src="@{${copertina.indirizzo}}" style="width:100%;height:100%;" >
+											</div>
 
 										<div class="overlay"></div>
 
 										<div class="post-content">
 											<ul class="entry-meta">
-												<li>Dicembre 06, 1988</li>
-												<li><a href="#">Neihto Uzorhoma</a></li>
+												<li><a th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></a></li>
 											</ul>
-
+											
 											<h1 class="slide-title">
-												<a href="single-standard.html" title="">Miglior
-													fotografo del mese</a>
+												<a th:text="${album.titolo}"></a>
 											</h1>
+
 										</div>
 
 									</div>
@@ -125,11 +125,10 @@
 										<div class="post-content">
 											<ul class="entry-meta">
 												<li><a th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></a></li>
-												<li>
 											</ul>
 
 											<h1 class="slide-title">
-												<a href="single-standard.html" title="" th:text="${foto.titolo}"></a>
+												<a th:text="${foto.titolo}"></a>
 											</h1>
 										</div>
 
@@ -140,21 +139,18 @@
 								<li>
 									<div class="featured-post-slide">
 
-										<div class="post-background"
-											style="background-image: url('images/thumbs/featured/featured-3.jpg');"></div>
+										<div class="post-background" style="overflow: hidden;">
+										<img th:src="@{${fotografo.imgProfilo}}" style="width:100%;height:100%;" >
+											</div>
 
 										<div class="overlay"></div>
 
 										<div class="post-content">
 											<ul class="entry-meta">
-												<li>Febbaraio 23, 1976</li>
-												<li><a href="#" class="author">Kurato Jimuzo</a></li>
+												<li><h1 class="slide-title"><a th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></a></h1></li>
+												<li>
 											</ul>
-
-											<h1 class="slide-title">
-												<a href="single-standard.html" title="">Miglior album
-													del mese</a>
-											</h1>
+											
 										</div>
 
 									</div>
@@ -169,10 +165,11 @@
 					<!-- end entry content -->
 				</div>
 
-				<!-- CATEGORIE
+				<!-- FOTO HOMEPAGE
    ================================================== -->
+ 
+   <div th:each="foto : ${fotos}">
 				<article class="brick entry format-standard animate-this">
-
 					<div class="entry-thumb">
 						<a href="single-standard.html" class="thumb-link"> <img
 							th:src="@{${foto.indirizzo}}" alt="building">
@@ -181,318 +178,55 @@
 
 					<div class="entry-text">
 						<div class="entry-header">
-
 							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
+								<span class="cat-links"> 			
+									<a th:text="${foto.fotografo.nome} + ' ' +${foto.fotografo.cognome}"></a>
 								</span>
 							</div>
-
+							
 							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
+								<a th:text="${foto.titolo}"></a>
 							</h1>
-
+							
 						</div>
+						
 						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
 							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit</div>
+							dolor nulla sed</div>
+	
 					</div>
-
 				</article>
 				<!-- end article -->
-
+	</div>
+	
+	   <div th:each="fotografo : ${fotografi}">
 				<article class="brick entry format-standard animate-this">
-
 					<div class="entry-thumb">
 						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
+							th:src="@{${fotografo.imgProfilo}}" alt="building">
 						</a>
 					</div>
 
 					<div class="entry-text">
 						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
+							
+							
 							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
+								<a th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></a>
 							</h1>
-
+							
 						</div>
+						
 						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
 							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit</div>
+							dolor nulla sed</div>
+	
 					</div>
-
 				</article>
 				<!-- end article -->
-
-
-				<!-- /article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-				
-				<article class="brick entry format-standard animate-this">
-
-					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							src="images/thumbs/diagonal-building.jpg" alt="building">
-						</a>
-					</div>
-
-					<div class="entry-text">
-						<div class="entry-header">
-
-							<div class="entry-meta">
-								<span class="cat-links"> <a href="#">Design</a> <a
-									href="#">Photography</a>
-								</span>
-							</div>
-
-							<h1 class="entry-title">
-								<a href="single-standard.html">Just a Standard Format Post.</a>
-							</h1>
-
-						</div>
-						<div class="entry-excerpt">Lorem ipsum Sed eiusmod esse
-							aliqua sed incididunt aliqua incididunt mollit id et sit proident
-							dolor nulla sed commodo est ad minim elit reprehenderit nisi
-							officia aute incididunt velit sint in aliqua cillum in consequat
-							consequat in culpa in anim.</div>
-					</div>
-
-				</article>
-				<!-- end article -->
-
-			</div>
+	</div>
+	
+		</div>
 			<!-- end brick-wrapper -->
 
 		</div>
