Verifiche not null

--- a/src/main/resources/templates/mostraAlbums.html
+++ b/src/main/resources/templates/mostraAlbums.html
@@ -80,8 +80,7 @@
 	<section id="page-header">
 		<div class="row current-cat">
 			<div class="col-full">
-				<h1><font size="30px">Album</h1>
-				<h4>Tutti gli album caricati</h4>
+				<h1><font size="30px">Album</font></h1>
 			</div>
 		</div>
 	</section>
