--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -123,11 +123,19 @@
 							<button type="submit" class="half-width">Ricerca album</button>
 						</form>
 					</article>
+					
 					<article class="brick entry format-standard animate-this">
 						<form name="cForm" id="cForm" method="get" action="/cercaFoto">
 							<button type="submit" class="half-width">Ricerca foto</button>
 						</form>
 					</article>
+					
+					<article class="brick entry format-standard animate-this">
+						<form name="cForm" id="cForm" method="get" action="/vediRichieste">
+							<button type="submit" class="half-width">Richieste</button>
+						</form>
+					</article>
+					
 					<article class="brick entry format-standard animate-this">
 						<form name="cForm" id="cForm" method="get" action="/logout">
 							<button type="submit" class="half-width">Logout</button>
