--- a/src/main/resources/templates/mostraAlbum.html
+++ b/src/main/resources/templates/mostraAlbum.html
@@ -1,36 +1,148 @@
-<!DOCTYPE html >
-<html xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!DOCTYPE html>
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns="htttp://www.w3.org/1999/html">
+<!--<![endif]-->
 <head>
+
+<!--- basic page needs
+   ================================================== -->
+<meta charset="utf-8">
+<title>Album</title>
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- mobile specific metas
+   ================================================== -->
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<!-- CSS
+   ================================================== -->
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/vendor.css">
+<link rel="stylesheet" href="../css/main.css">
+
+
+<!-- script
+   ================================================== -->
+<script src="../js/modernizr.js"></script>
+<script src="../js/pace.min.js"></script>
+
+<!-- favicons
+	================================================== -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
-<body>
-	<div>
-		<h4> Album </h4>
-		
-		Nome: <span th:text="${album.titolo}"> </span>
-		
-		<br/>Foto:
-		<ul>
-		<li th:each="foto : ${fotos}">
-			<a th:text="${foto.titolo}"></a>
-			&nbsp;&nbsp;&nbsp;&nbsp;
-			<img th:src="@{${foto.indirizzo}}" width="70px" height="70px">
-		</li>
-		</ul>
 
-		<br/>
-		<br/>
-		<form name="cForm" id="cForm" method="get" action="/cercaAlbum" th:if="${utente == 'ADMIN'}">
-				<button type="submit" class="half-width">Nuova ricerca</button>
-		</form>
+<body id="top">
 
-		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
-			<button type="submit" class="half-width">Torna all'area staff</button>
-		</form>
-		
-		<form name="cForm" id="cForm" method="get" action="/" th:if="${utente != 'ADMIN'}">
-			<button type="submit" class="half-width">Torna alla home</button>
-		</form>
-		
+	<!-- header 
+   ================================================== -->
+	<header class="short-header">
+
+		<div class="gradient-block"></div>
+
+		<div class="row header-content">
+
+			<div class="logo">
+				<a href="/">Author</a>
+			</div>
+
+			<nav id="main-nav-wrap">
+				<ul class="main-navigation sf-menu">
+					<li><a href="/" title="">Home</a></li>
+					<li class="has-children">
+					<li class="has-children">Categorie
+						<ul class="sub-menu">
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
+						</ul>
+					</li>
+					<li class="has-children"><a href="/mostraCarrello" title="">Carrello</a>
+					</li>
+					<li><a href="/about" title="">About</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
+				</ul>
+			</nav>
+			<!-- end main-nav-wrap -->
+
+
+		</div>
+
+	</header>
+	<!-- end header -->
+
+
+	<!-- content
+   ================================================== -->
+	<section id="content-wrap" class="site-page">
+		<div class="row">
+			<div class="col-twelve">
+
+				<section>
+					<div class="content-media">
+						<div class="primary-content" style="text-align: center;">
+							<h1 class="entry-title add-bottom" th:text="${album.titolo}" style="text-align: center;"></h1>
+							<div th:each="foto : ${fotos}">
+							<img th:src="@{${foto.indirizzo}}" width="512px" height="512px">
+							</div>
+						</div>
+					</div>
+				</section>
+
+
+
+				<a th:href="@{/cercaAlbum}" th:if="${utente == 'ADMIN'}">
+					<button type="submit" class="half-width">Nuova ricerca</button>
+				</a> <a th:href="@{/pannelloDiControllo}" th:if="${utente == 'ADMIN'}">
+					<button type="submit" class="half-width">Torna all'area
+						staff</button>
+				</a> <a th:href="@{/}" th:if="${utente != 'ADMIN'}">
+					<button type="submit" class="half-width">Torna alla home</button>
+				</a>
+
+
+
+			</div>
+			<!-- end col-twelve -->
+		</div>
+		<!-- end row -->
+
+	</section>
+	<!-- end content -->
+
+	<div class="footer-bottom">
+		<div class="row">
+
+			<div class="col-twelve">
+				<div class="copyright">
+					<span>© Copyright SILPH 2019</span> <span>Design by <a
+						href="http://www.styleshout.com/">styleshout</a></span>
+				</div>
+
+				<div id="go-top">
+					<a class="smoothscroll" title="Back to Top" href="#top"><i
+						class="icon icon-arrow-up"></i></a>
+				</div>
+			</div>
+
+		</div>
 	</div>
+	<!-- end footer-bottom -->
+
+	<div id="preloader">
+		<div id="loader"></div>
+	</div>
+
+	<!-- Java Script
+   ================================================== -->
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
+
 </body>
+
 </html>
