--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -20,15 +20,15 @@
 
 <!-- CSS
    ================================================== -->
-<link rel="stylesheet" href="css/base.css">
-<link rel="stylesheet" href="css/vendor.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/vendor.css">
+<link rel="stylesheet" href="../css/main.css">
 
 
 <!-- script
    ================================================== -->
-<script src="js/modernizr.js"></script>
-<script src="js/pace.min.js"></script>
+<script src="../js/modernizr.js"></script>
+<script src="../js/pace.min.js"></script>
 
 <!-- favicons
 	================================================== -->
@@ -80,6 +80,7 @@
 		<div class="row current-cat">
 			<div class="col-full">
 				<h1><font size="30px">Foto</font></h1>
+				<h3><span th:text="${fotografo.nome} + ' ' +${fotografo.cognome}" th:if="${f == 'EXIST'}"></span></h3>
 			</div>
 		</div>
 	</section>
@@ -170,9 +171,9 @@
 
 	<!-- Java Script
    ================================================== -->
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
 
 </body>
 
