--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -80,7 +80,7 @@ body {
  * ------------------------------------------------------------------- */
 a,
 a:visited {
-	color: #1237B1;
+	color: #828282;
 	border-bottom: 1px solid transparent;
 	-moz-transition: all 0.4s ease-in-out;
 	-o-transition: all 0.4s ease-in-out;
