--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -113,7 +113,7 @@
 						<div class="entry-header">
 							<div class="entry-meta">
 								<span class="cat-links"> 			
-									<a th:text="${foto.fotografo.nome} + ' ' +${foto.fotografo.cognome}"></a>
+									<span th:text="${foto.fotografo.nome} + ' ' +${foto.fotografo.cognome}"></span>
 								</span>
 							</div>
 							
