--- a/src/main/resources/templates/mostraAlbum.html
+++ b/src/main/resources/templates/mostraAlbum.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns="htttp://www.w3.org/1999/html">
@@ -8,7 +10,7 @@
 <!--- basic page needs
    ================================================== -->
 <meta charset="utf-8">
-<title>Album</title>
+<title>Foto</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -53,7 +55,6 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children">
 					<li class="has-children">Categorie
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
@@ -61,13 +62,12 @@
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul>
 					</li>
-					<li class="has-children"><a href="/mostraCarrello" title="">Carrello</a>
-					</li>
+					<li class="current"><a href="/mostraCarrello">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
 			</nav>
-			<!-- end main-nav-wrap -->
+
 
 
 		</div>
@@ -76,24 +76,40 @@
 	<!-- end header -->
 
 
-	<!-- content
+	<!-- page header
    ================================================== -->
-	<section id="content-wrap" class="site-page">
-		<div class="row">
-			<div class="col-twelve">
+	<section id="page-header">
+		<div class="row current-cat">
+			<div class="col-full">
+				<h1 class="entry-title add-bottom" th:text="${album.titolo}" style="text-align: center;"></h1>
+			</div>
+		</div>
+	</section>
 
-				<section>
-					<div class="content-media">
-						<div class="primary-content" style="text-align: center;">
-							<h1 class="entry-title add-bottom" th:text="${album.titolo}" style="text-align: center;"></h1>
-							<div th:each="foto : ${fotos}">
-							<img th:src="@{${foto.indirizzo}}" width="512px" height="512px">
-							</div>
-						</div>
+
+	<!-- masonry
+   ================================================== -->
+	<section id="bricks" class="with-top-sep">
+
+		<div class="row masonry">
+
+			<!-- brick-wrapper -->
+			
+			<div class="bricks-wrapper">
+
+		<div th:each="foto : ${fotos}">
+				<div class="grid-sizer"></div>
+				<article class="brick entry format-standard animate-this">
+					<div class="entry-thumb">
+						<img th:src="@{${foto.indirizzo}}" width="512px" height="512px">
 					</div>
-				</section>
+				</article>
+				</div>
+			</div>
 
-
+			
+			<!-- PULSANTE INOLTRA RICHIESTA -->
+			<article class="brick entry format-standard animate-this">
 
 				<a th:href="@{/cercaAlbum}" th:if="${utente == 'ADMIN'}">
 					<button type="submit" class="half-width">Nuova ricerca</button>
@@ -104,35 +120,32 @@
 				</a> <a th:href="@{/}" th:if="${utente != 'ADMIN'}">
 					<button type="submit" class="half-width">Torna alla home</button>
 				</a>
-
-
-
-			</div>
-			<!-- end col-twelve -->
+			</article>
 		</div>
-		<!-- end row -->
-
 	</section>
-	<!-- end content -->
 
-	<div class="footer-bottom">
-		<div class="row">
+	<!-- START BOTTOM FOOTER -->
+	<footer>
+		<div class="footer-bottom">
+			<div class="row">
 
-			<div class="col-twelve">
-				<div class="copyright">
-					<span>© Copyright SILPH 2019</span> <span>Design by <a
-						href="http://www.styleshout.com/">styleshout</a></span>
+				<div class="col-twelve">
+					<div class="copyright">
+						<span>© Copyright SILPH 2019</span> <span>Design by <a
+							href="http://www.styleshout.com/">styleshout</a></span>
+					</div>
+
+					<div id="go-top">
+						<a class="smoothscroll" title="Back to Top" href="#top"><i
+							class="icon icon-arrow-up"></i></a>
+					</div>
 				</div>
 
-				<div id="go-top">
-					<a class="smoothscroll" title="Back to Top" href="#top"><i
-						class="icon icon-arrow-up"></i></a>
-				</div>
 			</div>
-
 		</div>
-	</div>
-	<!-- end footer-bottom -->
+		<!-- end footer-bottom -->
+
+	</footer>
 
 	<div id="preloader">
 		<div id="loader"></div>
