--- a/src/main/resources/templates/mostraRichiesta.html
+++ b/src/main/resources/templates/mostraRichiesta.html
@@ -1,30 +1,152 @@
-<!DOCTYPE html >
-<html xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!DOCTYPE html>
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!--<![endif]-->
 <head>
-</head>
-<body>
-	<div>
-		<h4> Richiesta </h4>
-		
-		Nome: <span th:text="${richiesta.nome}"> </span>
-		<br>Email: <span th:text="${richiesta.email}"> </span>
-		<br>Descrizione: <span th:text="${richiesta.descrizione}"> </span>
-		
-		<br/>Foto:
-		<ul>
-		<li th:each="foto : ${richiesta.fotos}">
-			<a th:text="${foto.titolo}"></a>
-			&nbsp;&nbsp;&nbsp;&nbsp;
-			<img th:src="@{${foto.indirizzo}}" width="70px" height="70px">
-		</li>
-		</ul>
-		
-		<form name="cForm" id="cForm" method="get" action="/" th:if="${utente != 'ADMIN'}">
-			<button type="submit" class="half-width">Torna alla home</button>
-		</form>
 
-	</div>
+<!--- basic page needs
+   ================================================== -->
+<meta charset="utf-8">
+<title>Foto</title>
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- mobile specific metas
+   ================================================== -->
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<!-- CSS
+   ================================================== -->
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/vendor.css">
+<link rel="stylesheet" href="../css/main.css">
+
+
+<!-- script
+   ================================================== -->
+<script src="../js/modernizr.js"></script>
+<script src="../js/pace.min.js"></script>
+
+<!-- favicons
+	================================================== -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+</head>
+
+<body id="top">
+
+	<!-- header 
+   ================================================== -->
+	<header class="short-header">
+
+		<div class="gradient-block"></div>
+
+		<div class="row header-content">
+
+			<div class="logo">
+				<a href="/">Author</a>
+			</div>
+
+			<nav id="main-nav-wrap">
+				<ul class="main-navigation sf-menu">
+					<li><a href="/" title="">Home</a></li>
+					<li class="has-children">Categorie
+						<ul class="sub-menu">
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
+						</ul></li>
+					<li><a href="/mostraCarrello" title="">Carrello</a></li>	
+					<li><a href="/about" title="">About</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
+				</ul>
+			</nav>
+			
+			
+
+		</div>
+
+	</header>
+	<!-- end header -->
+
+
+	<!-- page header
+   ================================================== -->
+	<section id="page-header">
+		<div class="row current-cat">
+			<div class="col-full">
+				<h1><font size="30px">Richiesta</font></h1>
+				<h4>inoltrata con successo</h4>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- masonry
+   ================================================== -->
+	<section id="bricks" class="with-top-sep">
+
+		<div class="row masonry">
+
+			<!-- brick-wrapper -->
+			
+			<div class="bricks-wrapper">
+
+				<h6><font size="4px" color="gray"><span th:text="'Nome: ' +${richiesta.nome}"></span></font></h6>
+				<h6><font size="4px" color="gray"><span th:text="'Email: ' +${richiesta.email}"></span></font></h6>
+				<h6><font size="4px" color="gray"><span th:text="'Descrizione: ' +${richiesta.descrizione}"></span></font></h6>
+				
+				
+				
+					<section id="bricks" class="with-top-sep">
+
+		<div class="row masonry">
+
+			<!-- brick-wrapper -->
+			
+			<div class="bricks-wrapper">
+
+		<div th:each="foto : ${richiesta.fotos}">
+				<div class="grid-sizer"></div>
+
+				<article class="brick entry format-standard animate-this">
+					<div class="entry-thumb">
+						<img th:src="${foto.indirizzo}" width="512px" height="512px"></img>
+					</div>
+				</article>
+				</div>
+			</div>
+		</div>
+	</section>
+
+				
+				
+			</div>	
+			
+			
+			
+					
+		</div>	
+		
+	
+		
+	</section>
+
+
+
+
+	<!-- Java Script
+   ================================================== -->
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
+
 </body>
+
 </html>
 
 
