--- a/src/main/resources/templates/mostraFoto.html
+++ b/src/main/resources/templates/mostraFoto.html
@@ -110,8 +110,7 @@
 				
 				<article class="brick entry format-standard animate-this">
 				<a href="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
-					<button type="submit" class="half-width">Torna all'area
-						staff</button>
+					<button type="submit" class="half-width">Torna all'area staff</button>
 				</a> 
 				</article>
 				
